force-app/main/default/objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c/smagicinteract__Converse_Desk_Recently_Used_Filters__c.object-meta.xml
<CustomObject>
    <label>Converse Desk Recently Used Filters</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse Desk Recently Used Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>