force-app/main/default/objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c/fields/smagicinteract__Filter_ID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Filter_ID__c</fullName>
    <description>This field contains the ID of list view or Converse App selected on Converse Desk.</description>
    <label>Filter ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>