force-app/main/default/objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c/fields/smagicinteract__Filter_Object__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Filter_Object__c</fullName>
    <description>This field contains the name of the object on which the List View or Converse App was selected in Converse Desk.</description>
    <label>Filter Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>