force-app/main/default/objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c/fields/smagicinteract__Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Unread</fullName>
            </value>
            <value>
                <fullName>No_Response</fullName>
                <label>Not Responded</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>