force-app/main/default/objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>