force-app/main/default/objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the user ID that selected List View or Converse App filter in Converse Desk.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Converse_Desk_Recently_Used_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>